--- a/style.css
+++ b/style.css
@@ -289,8 +289,10 @@ input[type="submit"], button {
 }
 
 
-/* Small Devices - turn off animations*/
+/* Small Devices */
 @media only screen and (max-width : 767px) {
-	.animated { all: unset; }
+	body {
+		background-color: var(--bg1-color) !important;
 	}
+}
 
